content/v1.3.0/zh/api/core-extra/_index.md
---
title: "core-extra 目录"
description: Core / Library 相关扩展类参考目录
---
<!-- BEGIN SECTION INDEX -->

## ↑ 上级导航

- [API 参考](../)
- [版本首页](../../)

## ↓ 子类列表 — 按字母分组

### A

- [ActionSetCode](./ActionSetCode)
- [AgentAttackType](./AgentAttackType)
- [AgentControllerType](./AgentControllerType)
- [AgentData](./AgentData)
- [AgentFlag](./AgentFlag)
- [AgentMovementMode](./AgentMovementMode)
- [AgentOriginUtilities](./AgentOriginUtilities)
- [AgentSaveData](./AgentSaveData)
- [AgentState](./AgentState)
- [AmbientInformation](./AmbientInformation)
- [ApplicationPlatform](./ApplicationPlatform)
- [ApplicationVersion](./ApplicationVersion)
- [ApplicationVersionJsonConverter](./ApplicationVersionJsonConverter)
- [ApplicationVersionType](./ApplicationVersionType)
- [AreaInformation](./AreaInformation)
- [ArmorComponent](./ArmorComponent)
- [ArmorMaterialTypes](./ArmorMaterialTypes)
- [AssemblyLoader](./AssemblyLoader)
- [AsyncRunner](./AsyncRunner)
- [AtmosphereInfo](./AtmosphereInfo)
- [AtmosphereState](./AtmosphereState)
- [AutoGeneratedSaveManager](./AutoGeneratedSaveManager)
- [AwaitableAsyncRunner](./AwaitableAsyncRunner)
- [AzureDiscovery](./AzureDiscovery)

### B

- [Banner](./Banner)
- [BannerColor](./BannerColor)
- [BannerColorVM](./BannerColorVM)
- [BannerComponent](./BannerComponent)
- [BannerData](./BannerData)
- [BannerEffect](./BannerEffect)
- [BannerExtensions](./BannerExtensions)
- [BannerIconData](./BannerIconData)
- [BannerIconGroup](./BannerIconGroup)
- [BannerIconVM](./BannerIconVM)
- [BannerImageIdentifier](./BannerImageIdentifier)
- [BannerImageIdentifierVM](./BannerImageIdentifierVM)
- [BannerManager](./BannerManager)
- [BannerViewModel](./BannerViewModel)
- [BasePath](./BasePath)
- [BasicCharacterObject](./BasicCharacterObject)
- [BasicCultureObject](./BasicCultureObject)
- [BasicGameModels](./BasicGameModels)
- [BasicTooltipViewModel](./BasicTooltipViewModel)
- [BattleResultVM](./BattleResultVM)
- [BattleSideEnum](./BattleSideEnum)
- [BattleSideEnumExtensions](./BattleSideEnumExtensions)
- [BattleState](./BattleState)
- [BeardCoverTypes](./BeardCoverTypes)
- [bin](./bin)
- [BinaryReader](./BinaryReader)
- [BinaryWriter](./BinaryWriter)
- [BindingListFloatItem](./BindingListFloatItem)
- [BindingListStringItem](./BindingListStringItem)
- [BindingPath](./BindingPath)
- [BladeData](./BladeData)
- [BodyDeformTypes](./BodyDeformTypes)
- [BodyMeshMaturityType](./BodyMeshMaturityType)
- [BodyMeshTypes](./BodyMeshTypes)
- [BodyProperties](./BodyProperties)
- [BodyPropertiesJsonConverter](./BodyPropertiesJsonConverter)
- [BoolItemWithActionVM](./BoolItemWithActionVM)

### C

- [CachedDataAttribute](./CachedDataAttribute)
- [CampaignSaveMetaDataArgs](./CampaignSaveMetaDataArgs)
- [CharacterAttribute](./CharacterAttribute)
- [CharacterCode](./CharacterCode)
- [CharacterEquipmentItemVM](./CharacterEquipmentItemVM)
- [CharacterImageIdentifier](./CharacterImageIdentifier)
- [CharacterImageIdentifierVM](./CharacterImageIdentifierVM)
- [CharacterSkillsResolver](./CharacterSkillsResolver)
- [CharacterViewModel](./CharacterViewModel)
- [CharacterWithActionViewModel](./CharacterWithActionViewModel)
- [ChoiceTag](./ChoiceTag)
- [ClassCode](./ClassCode)
- [ClassCodeAccessModifier](./ClassCodeAccessModifier)
- [ClientProfiles](./ClientProfiles)
- [CodeBlock](./CodeBlock)
- [CodeGenerationContext](./CodeGenerationContext)
- [CodeGenerationFile](./CodeGenerationFile)
- [Color](./Color)
- [ColorExtensions](./ColorExtensions)
- [Colors](./Colors)
- [CombatStatCalculator](./CombatStatCalculator)
- [CommandLineArgumentFunction](./CommandLineArgumentFunction)
- [CommandLineFunctionality](./CommandLineFunctionality)
- [CommentSection](./CommentSection)
- [Common](./Common)
- [ComparerType](./ComparerType)
- [ConfigurationManager](./ConfigurationManager)
- [ConstructorCode](./ConstructorCode)
- [Corners](./Corners)
- [Crafting](./Crafting)
- [CraftingItemViewModel](./CraftingItemViewModel)
- [CraftingMaterials](./CraftingMaterials)
- [CraftingPiece](./CraftingPiece)
- [CraftingPieceImageIdentifier](./CraftingPieceImageIdentifier)
- [CraftingPieceImageIdentifierVM](./CraftingPieceImageIdentifierVM)
- [CraftingStatData](./CraftingStatData)
- [CraftingStatTypes](./CraftingStatTypes)
- [CraftingTemplate](./CraftingTemplate)
- [CubicBezier](./CubicBezier)

### D

- [DamageTypes](./DamageTypes)
- [DataSourceProperty](./DataSourceProperty)
- [Debug](./Debug)
- [DebugColor](./DebugColor)
- [DebugSystemFilter](./DebugSystemFilter)
- [DebugUserFilter](./DebugUserFilter)
- [DefaultBannerEffects](./DefaultBannerEffects)
- [DefaultCharacterAttributes](./DefaultCharacterAttributes)
- [DefaultItemCategories](./DefaultItemCategories)
- [DefaultItemCategorySelector](./DefaultItemCategorySelector)
- [DefaultItemValueModel](./DefaultItemValueModel)
- [DefaultParallelDriver](./DefaultParallelDriver)
- [DefaultRidingModel](./DefaultRidingModel)
- [DefaultSiegeEngineTypes](./DefaultSiegeEngineTypes)
- [DefaultSkills](./DefaultSkills)
- [DeploymentFormationClass](./DeploymentFormationClass)
- [DiamondDebugCategory](./DiamondDebugCategory)
- [DiamondDebugManager](./DiamondDebugManager)
- [DictionaryByType](./DictionaryByType)
- [DotNetHttpDriver](./DotNetHttpDriver)
- [DrivenProperty](./DrivenProperty)
- [DummyCommunicator](./DummyCommunicator)
- [DynamicBodyProperties](./DynamicBodyProperties)

### E

- [EffectIncrementType](./EffectIncrementType)
- [ElementNotificationVM](./ElementNotificationVM)
- [EmptyImageIdentifier](./EmptyImageIdentifier)
- [EngineMethod](./EngineMethod)
- [EngineType](./EngineType)
- [EntitySystem](./EntitySystem)
- [EnumHelper](./EnumHelper)
- [Equipment](./Equipment)
- [EquipmentElement](./EquipmentElement)
- [EquipmentFlags](./EquipmentFlags)
- [EquipmentIndex](./EquipmentIndex)
- [EquipmentType](./EquipmentType)
- [EventBase](./EventBase)
- [EventManager](./EventManager)
- [Extensions](./Extensions)
- [Extensions](./Extensions__TaleWorlds_Core)

### F

- [FaceGen](./FaceGen)
- [FaceGeneratorStage](./FaceGeneratorStage)
- [FaceGenHistory](./FaceGenHistory)
- [FileHelper](./FileHelper)
- [FileHelperExtensions](./FileHelperExtensions)
- [FilePaths](./FilePaths)
- [FogInformation](./FogInformation)
- [ForestDensity](./ForestDensity)
- [FormationClass](./FormationClass)
- [FormationClassExtensions](./FormationClassExtensions)
- [FormationFilterType](./FormationFilterType)
- [FormationPositionPreference](./FormationPositionPreference)

### G

- [Game](./Game)
- [GameHandler](./GameHandler)
- [GameManagerBase](./GameManagerBase)
- [GameManagerComponent](./GameManagerComponent)
- [GameManagerLoadingSteps](./GameManagerLoadingSteps)
- [GameModel](./GameModel)
- [GameModelsManager](./GameModelsManager)
- [GameNotificationItemVM](./GameNotificationItemVM)
- [GameNotificationVM](./GameNotificationVM)
- [GameState](./GameState)
- [GameStateManager](./GameStateManager)
- [GameStateManagerType](./GameStateManagerType)
- [GameText](./GameText)
- [GameTextHelper](./GameTextHelper)
- [GameTextManager](./GameTextManager)
- [GameTexts](./GameTexts)
- [GameTextVariation](./GameTextVariation)
- [GameType](./GameType)
- [GameTypeLoadingStates](./GameTypeLoadingStates)
- [GCHandleFactory](./GCHandleFactory)
- [GenericComparer](./GenericComparer)
- [GenericImageIdentifierVM](./GenericImageIdentifierVM)
- [GraphLinePointVM](./GraphLinePointVM)
- [GraphLineVM](./GraphLineVM)
- [GraphVM](./GraphVM)

### H

- [HairCoverTypes](./HairCoverTypes)
- [HintViewModel](./HintViewModel)
- [HintVM](./HintVM)
- [HorseComponent](./HorseComponent)
- [HorseHarnessCoverTypes](./HorseHarnessCoverTypes)
- [HorseTailCoverTypes](./HorseTailCoverTypes)
- [HTMLDebugCategory](./HTMLDebugCategory)
- [HTMLDebugData](./HTMLDebugData)
- [HttpDriverManager](./HttpDriverManager)
- [HttpGetRequest](./HttpGetRequest)
- [HttpHelper](./HttpHelper)
- [HttpPostRequest](./HttpPostRequest)
- [HttpRequestTaskState](./HttpRequestTaskState)
- [HumanBone](./HumanBone)
- [HyperlinkTexts](./HyperlinkTexts)

### I

- [IAgent](./IAgent)
- [IAgentOriginBase](./IAgentOriginBase)
- [IBannerVisual](./IBannerVisual)
- [IBannerVisualCreator](./IBannerVisualCreator)
- [IBattleCombatant](./IBattleCombatant)
- [IBattleObserver](./IBattleObserver)
- [ICache](./ICache)
- [ICameraModeLogic](./ICameraModeLogic)
- [ICharacterData](./ICharacterData)
- [ICommunicator](./ICommunicator)
- [IConfigurationManager](./IConfigurationManager)
- [IDebugManager](./IDebugManager)
- [IEntityComponent](./IEntityComponent)
- [IFaceGen](./IFaceGen)
- [IFaceGeneratorCustomFilter](./IFaceGeneratorCustomFilter)
- [IGameStarter](./IGameStarter)
- [IGameStateListener](./IGameStateListener)
- [IGameStateManagerListener](./IGameStateManagerListener)
- [IGameStateManagerOwner](./IGameStateManagerOwner)
- [IHttpDriver](./IHttpDriver)
- [IHttpRequestTask](./IHttpRequestTask)
- [IInformationDataHolder](./IInformationDataHolder)
- [ImageIdentifier](./ImageIdentifier)
- [ImageIdentifierVM](./ImageIdentifierVM)
- [IManagedParametersInitializer](./IManagedParametersInitializer)
- [IMBBindingList](./IMBBindingList)
- [IMBCollection](./IMBCollection)
- [IMission](./IMission)
- [IMissionSiegeWeapon](./IMissionSiegeWeapon)
- [IMissionTeam](./IMissionTeam)
- [IMissionTroopSupplier](./IMissionTroopSupplier)
- [IMonsterMissionData](./IMonsterMissionData)
- [IMonsterMissionDataCreator](./IMonsterMissionDataCreator)
- [IndexEntry](./IndexEntry)
- [INetworkCommunication](./INetworkCommunication)
- [InformationData](./InformationData)
- [InformationManager](./InformationManager)
- [InformationMessage](./InformationMessage)
- [InitialWeaponEquipPreference](./InitialWeaponEquipPreference)
- [InputType](./InputType)
- [InputUsageMask](./InputUsageMask)
- [InquiryData](./InquiryData)
- [InquiryElement](./InquiryElement)
- [InquiryElementVM](./InquiryElementVM)
- [IParallelDriver](./IParallelDriver)
- [IPlatformFileHelper](./IPlatformFileHelper)
- [IReader](./IReader)
- [IReadOnlyPropertyOwner](./IReadOnlyPropertyOwner)
- [IReadOnlyPropertyOwnerF](./IReadOnlyPropertyOwnerF)
- [ISceneNotificationContextProvider](./ISceneNotificationContextProvider)
- [ISerializableObject](./ISerializableObject)
- [IShipOrigin](./IShipOrigin)
- [ITask](./ITask)
- [ITelemetryManager](./ITelemetryManager)
- [ItemCategory](./ItemCategory)
- [ItemCategorySelector](./ItemCategorySelector)
- [ItemCollectionElementViewModel](./ItemCollectionElementViewModel)
- [ItemComponent](./ItemComponent)
- [ItemFlags](./ItemFlags)
- [ItemImageIdentifier](./ItemImageIdentifier)
- [ItemImageIdentifierVM](./ItemImageIdentifierVM)
- [ItemModifier](./ItemModifier)
- [ItemModifierGroup](./ItemModifierGroup)
- [ItemObject](./ItemObject)
- [ItemQuality](./ItemQuality)
- [ItemRosterElement](./ItemRosterElement)
- [ItemTiers](./ItemTiers)
- [ItemTypeEnum](./ItemTypeEnum)
- [ItemUsageSetFlags](./ItemUsageSetFlags)
- [ItemValueModel](./ItemValueModel)
- [ItemVM](./ItemVM)
- [ITrackableBase](./ITrackableBase)
- [IViewModel](./IViewModel)
- [IViewModelGetterInterface](./IViewModelGetterInterface)
- [IViewModelSetterInterface](./IViewModelSetterInterface)
- [IWriter](./IWriter)

### J

- [JobType](./JobType)

### L

- [LinearFrictionTerm](./LinearFrictionTerm)
- [LineSegment2D](./LineSegment2D)
- [ListChangedEventArgs](./ListChangedEventArgs)
- [ListChangedType](./ListChangedType)
- [Logger](./Logger)

### M

- [MachineId](./MachineId)
- [ManagedArray](./ManagedArray)
- [ManagedDllFolder](./ManagedDllFolder)
- [ManagedParameters](./ManagedParameters)
- [ManagedParametersEnum](./ManagedParametersEnum)
- [Mat2](./Mat2)
- [Mat3](./Mat3)
- [MaterialProperty](./MaterialProperty)
- [MathF](./MathF)
- [MatrixFrame](./MatrixFrame)
- [MBArrayList](./MBArrayList)
- [MBBindingList](./MBBindingList)
- [MBBodyProperty](./MBBodyProperty)
- [MBCharacterSkills](./MBCharacterSkills)
- [MBEquipmentRoster](./MBEquipmentRoster)
- [MBException](./MBException)
- [MBFastRandom](./MBFastRandom)
- [MBFastRandomSelector](./MBFastRandomSelector)
- [MBGameModel](./MBGameModel)
- [MBHaltonColorGenerator](./MBHaltonColorGenerator)
- [MBIllegalValueException](./MBIllegalValueException)
- [MBInformationManager](./MBInformationManager)
- [MBInvalidParameterException](./MBInvalidParameterException)
- [MBList](./MBList)
- [MBList2D](./MBList2D)
- [MBMath](./MBMath)
- [MBMethodNameNotFoundException](./MBMethodNameNotFoundException)
- [MBMisuseException](./MBMisuseException)
- [MBNetwork](./MBNetwork)
- [MBNetworkBitException](./MBNetworkBitException)
- [MBNotFoundException](./MBNotFoundException)
- [MBNotNullParameterException](./MBNotNullParameterException)
- [MBNullParameterException](./MBNullParameterException)
- [MBObjectManagerExtensions](./MBObjectManagerExtensions)
- [MBOutOfRangeException](./MBOutOfRangeException)
- [MBPerlin](./MBPerlin)
- [MBQueue](./MBQueue)
- [MBRandom](./MBRandom)
- [MBReadOnlyDictionary](./MBReadOnlyDictionary)
- [MBReadOnlyList](./MBReadOnlyList)
- [MBReadOnlyQueue](./MBReadOnlyQueue)
- [MBSaveLoad](./MBSaveLoad)
- [MBSortedMultiList](./MBSortedMultiList)
- [MBStringBuilder](./MBStringBuilder)
- [MBTypeMismatchException](./MBTypeMismatchException)
- [MBUnderFlowException](./MBUnderFlowException)
- [MBUnknownTypeException](./MBUnknownTypeException)
- [MBUtil](./MBUtil)
- [MBWorkspace](./MBWorkspace)
- [MetaDataExtensions](./MetaDataExtensions)
- [MethodCode](./MethodCode)
- [MethodCodeAccessModifier](./MethodCodeAccessModifier)
- [MethodCodePolymorphismInfo](./MethodCodePolymorphismInfo)
- [MissionInitializerRecord](./MissionInitializerRecord)
- [MissionMode](./MissionMode)
- [MissionResult](./MissionResult)
- [MissionShipObject](./MissionShipObject)
- [MissionSiegeWeapon](./MissionSiegeWeapon)
- [ModuleCheckResultType](./ModuleCheckResultType)
- [Monster](./Monster)
- [MountCreationKey](./MountCreationKey)
- [MultiSelectionInquiryData](./MultiSelectionInquiryData)

### N

- [NamespaceCode](./NamespaceCode)
- [NauticalInformation](./NauticalInformation)
- [NavigationPath](./NavigationPath)
- [NewsItem](./NewsItem)
- [NewsManager](./NewsManager)
- [NewsType](./NewsType)
- [NewsTypes](./NewsTypes)
- [NotificationSceneProperties](./NotificationSceneProperties)

### O

- [ObjectInstanceTracker](./ObjectInstanceTracker)
- [Oriented2DArea](./Oriented2DArea)

### P

- [ParameterContainer](./ParameterContainer)
- [ParameterFile](./ParameterFile)
- [ParameterLoader](./ParameterLoader)
- [Parameters](./Parameters)
- [PathFaceRecord](./PathFaceRecord)
- [PathFinder](./PathFinder)
- [PeerComponent](./PeerComponent)
- [PerformanceTestBlock](./PerformanceTestBlock)
- [PieceData](./PieceData)
- [PieceTypes](./PieceTypes)
- [PinnedArrayData](./PinnedArrayData)
- [Platform](./Platform)
- [PlatformDirectoryPath](./PlatformDirectoryPath)
- [PlatformFileHelperPC](./PlatformFileHelperPC)
- [PlatformFilePath](./PlatformFilePath)
- [PlatformFileType](./PlatformFileType)
- [PlatformInitParams](./PlatformInitParams)
- [PlayerAvatarImageIdentifier](./PlayerAvatarImageIdentifier)
- [PlayerAvatarImageIdentifierVM](./PlayerAvatarImageIdentifierVM)
- [PlayerGameState](./PlayerGameState)
- [PostProcessInformation](./PostProcessInformation)
- [PowerLevelComparer](./PowerLevelComparer)
- [PriorityQueue](./PriorityQueue)
- [ProfanityChechkerType](./ProfanityChechkerType)
- [ProfanityChecker](./ProfanityChecker)
- [Property](./Property)
- [PropertyBasedTooltipVM](./PropertyBasedTooltipVM)
- [PropertyChangedWithBoolValueEventArgs](./PropertyChangedWithBoolValueEventArgs)
- [PropertyChangedWithColorValueEventArgs](./PropertyChangedWithColorValueEventArgs)
- [PropertyChangedWithDoubleValueEventArgs](./PropertyChangedWithDoubleValueEventArgs)
- [PropertyChangedWithFloatValueEventArgs](./PropertyChangedWithFloatValueEventArgs)
- [PropertyChangedWithIntValueEventArgs](./PropertyChangedWithIntValueEventArgs)
- [PropertyChangedWithUIntValueEventArgs](./PropertyChangedWithUIntValueEventArgs)
- [PropertyChangedWithValueEventArgs](./PropertyChangedWithValueEventArgs)
- [PropertyChangedWithVec2ValueEventArgs](./PropertyChangedWithVec2ValueEventArgs)
- [PropertyObject](./PropertyObject)
- [PropertyOwner](./PropertyOwner)
- [PropertyOwnerF](./PropertyOwnerF)

### Q

- [Quaternion](./Quaternion)

### R

- [RainInformation](./RainInformation)
- [Ray](./Ray)
- [RefiningFormula](./RefiningFormula)
- [RelevantContextType](./RelevantContextType)
- [ResetAllTutorialsEvent](./ResetAllTutorialsEvent)
- [ResourceDepot](./ResourceDepot)
- [ResourceDepotFile](./ResourceDepotFile)
- [ResourceDepotLocation](./ResourceDepotLocation)
- [RidingModel](./RidingModel)
- [RundownLineVM](./RundownLineVM)
- [RundownTooltipVM](./RundownTooltipVM)
- [Runtime](./Runtime)

### S

- [SaddleComponent](./SaddleComponent)
- [SailType](./SailType)
- [SaveableCoreTypeDefiner](./SaveableCoreTypeDefiner)
- [SaveResult](./SaveResult)
- [SaveResultWithMessage](./SaveResultWithMessage)
- [SceneNotificationCharacter](./SceneNotificationCharacter)
- [SceneNotificationData](./SceneNotificationData)
- [SceneNotificationShip](./SceneNotificationShip)
- [SceneNotificationVM](./SceneNotificationVM)
- [ScopedTimer](./ScopedTimer)
- [SelectorItemVM](./SelectorItemVM)
- [SelectorVM](./SelectorVM)
- [SerialTask](./SerialTask)
- [ShipHull](./ShipHull)
- [ShipPhysicsReference](./ShipPhysicsReference)
- [ShipSail](./ShipSail)
- [ShipSlot](./ShipSlot)
- [ShipType](./ShipType)
- [ShipUpgradePiece](./ShipUpgradePiece)
- [ShipVisualSlotInfo](./ShipVisualSlotInfo)
- [SiegeEngineType](./SiegeEngineType)
- [SingleThreadedSynchronizationContext](./SingleThreadedSynchronizationContext)
- [SingleThreadedSynchronizationContextManager](./SingleThreadedSynchronizationContextManager)
- [SkeletonScale](./SkeletonScale)
- [SkillObject](./SkillObject)
- [SkillType](./SkillType)
- [SkinMask](./SkinMask)
- [SkyInformation](./SkyInformation)
- [SnowInformation](./SnowInformation)
- [SpectatorCameraTypes](./SpectatorCameraTypes)
- [SRTHelper](./SRTHelper)
- [SrtParser](./SrtParser)
- [StackArray](./StackArray)
- [StackArray10FloatFloatTuple](./StackArray10FloatFloatTuple)
- [StackArray2Bool](./StackArray2Bool)
- [StackArray32Bool](./StackArray32Bool)
- [StackArray3Bool](./StackArray3Bool)
- [StackArray3Float](./StackArray3Float)
- [StackArray3Int](./StackArray3Int)
- [StackArray4Bool](./StackArray4Bool)
- [StackArray4Int](./StackArray4Int)
- [StackArray5Bool](./StackArray5Bool)
- [StackArray5Float](./StackArray5Float)
- [StackArray6Bool](./StackArray6Bool)
- [StackArray7Bool](./StackArray7Bool)
- [StackArray8Bool](./StackArray8Bool)
- [StackArray8Int](./StackArray8Int)
- [StackArray8Vec3](./StackArray8Vec3)
- [StanceTypes](./StanceTypes)
- [State](./State)
- [StaticBodyProperties](./StaticBodyProperties)
- [StreamHelpers](./StreamHelpers)
- [StrikeType](./StrikeType)
- [StringItemWithActionVM](./StringItemWithActionVM)
- [StringItemWithEnabledAndHintVM](./StringItemWithEnabledAndHintVM)
- [StringItemWithHintVM](./StringItemWithHintVM)
- [StringPairItemVM](./StringPairItemVM)
- [StringPairItemWithActionVM](./StringPairItemWithActionVM)
- [StringReader](./StringReader)
- [StringWriter](./StringWriter)
- [SubtitleItem](./SubtitleItem)
- [SunInformation](./SunInformation)

### T

- [TeamSideEnum](./TeamSideEnum)
- [TeamSideEnumExtensions](./TeamSideEnumExtensions)
- [TelemetryLevelMask](./TelemetryLevelMask)
- [TerrainType](./TerrainType)
- [TestCommonBase](./TestCommonBase)
- [TestContext](./TestContext)
- [TextInquiryData](./TextInquiryData)
- [TimedDictionaryCache](./TimedDictionaryCache)
- [TimeInformation](./TimeInformation)
- [Timer](./Timer)
- [TooltipBaseVM](./TooltipBaseVM)
- [TooltipMode](./TooltipMode)
- [TooltipProperty](./TooltipProperty)
- [TooltipPropertyFlags](./TooltipPropertyFlags)
- [TooltipRegistry](./TooltipRegistry)
- [TooltipTriggerVM](./TooltipTriggerVM)
- [TradeItemComponent](./TradeItemComponent)
- [Transformation](./Transformation)
- [TroopClassExtensions](./TroopClassExtensions)
- [TroopTraitsMask](./TroopTraitsMask)
- [TroopTraitsMaskExtensions](./TroopTraitsMaskExtensions)
- [TroopType](./TroopType)
- [TroopUsageFlags](./TroopUsageFlags)
- [TutorialContextChangedEvent](./TutorialContextChangedEvent)
- [TutorialContexts](./TutorialContexts)
- [TutorialNotificationElementChangeEvent](./TutorialNotificationElementChangeEvent)
- [TWException](./TWException)
- [TWParallel](./TWParallel)
- [TWSharedMutex](./TWSharedMutex)
- [TWSharedMutexReadLock](./TWSharedMutexReadLock)
- [TWSharedMutexWriteLock](./TWSharedMutexWriteLock)
- [TWXmlLoadException](./TWXmlLoadException)

### U

- [UiStringHelper](./UiStringHelper)
- [UnderwearTypes](./UnderwearTypes)
- [UndoRedoKey](./UndoRedoKey)
- [UniqueSceneId](./UniqueSceneId)
- [UniqueTroopDescriptor](./UniqueTroopDescriptor)
- [UnitSpawnPrioritizations](./UnitSpawnPrioritizations)

### V

- [ValueCategorization](./ValueCategorization)
- [VariableCode](./VariableCode)
- [VariableCodeAccessModifier](./VariableCodeAccessModifier)
- [Vec2](./Vec2)
- [Vec2i](./Vec2i)
- [Vec3](./Vec3)
- [Vec3i](./Vec3i)
- [ViewModel](./ViewModel)
- [VirtualDirectoryAttribute](./VirtualDirectoryAttribute)
- [VirtualFileAttribute](./VirtualFileAttribute)
- [VirtualFolders](./VirtualFolders)
- [VirtualPlayer](./VirtualPlayer)

### W

- [WaitForGameState](./WaitForGameState)
- [WeaponClass](./WeaponClass)
- [WeaponComponent](./WeaponComponent)
- [WeaponComponentData](./WeaponComponentData)
- [WeaponComponentDataExtensions](./WeaponComponentDataExtensions)
- [WeaponDescription](./WeaponDescription)
- [WeaponDesign](./WeaponDesign)
- [WeaponDesignElement](./WeaponDesignElement)
- [WeaponFlags](./WeaponFlags)
- [WeaponTiers](./WeaponTiers)
- [Win64_Shipping_Client](./Win64_Shipping_Client)

### X

- [XmlHelper](./XmlHelper)


<!-- END SECTION INDEX -->
